--- a/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
+++ b/wp-content/themes/new2/tailwind/custom/gutenberg/kadence/row.css
@@ -7,11 +7,11 @@
             @apply px-0;
         }
     }
-    &:not(.alignfull) {
+    /* &:not(.alignfull) {
         & > .kt-row-column-wrap {
             @apply wrapper;
         }
-    }
+    } */
     &.alignwide {
         & > .kt-row-column-wrap {
             @apply wrapper;
@@ -53,5 +53,11 @@
 .wp-block.alignfull {
     & > .innerblocks-wrap {
         @apply max-w-full px-0;
+    }
+}
+.kb-section-is-sticky {
+    .wp-block-group {
+        position: sticky;
+        top:0;
     }
 }
